--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
     <div>
         <h2>📋 課題2: リスト作成</h2>
         <p><strong>指示:</strong> 好きな食べ物を5つ、番号付きリスト（ol）で作成してください。</p>
-        <!-- ここに好きな食べ物のリストを作成してください -->
+        <ol type="1">
+            <li>とんかつ</li>
+            <li>からあげ</li>
+            <li>梅酒の梅</li>
+            <li>ラーメン</li>
+            <li>トムヤムクン</li>
+        </ol>
     </div>
     <div>
         <h2>🔗 課題3: リンク作成</h2>
         <p><strong>指示:</strong> 以下のリンクを作成してください：</p>
         <ul>
-            <li>Google（新しいタブで開く）</li>
-            <li>GitHub（新しいタブで開く）</li>
+            <li><a href="https://www.google.com/" target="_blank">Google（新しいタブで開く）</a></li>
+            <li><a href="https://github.com/" target="_blank">GitHub（新しいタブで開く）</a></li>
+            <li><a href="second.html">2ページ目へ</a></li>
         </ul>
-      <!-- ここにリンクを作成してください -->
     </div>
 </body>
 </html>
