--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>自己紹介</h3>
         <p>名前: 今井巧</p>
         <p>職業: 大学生</p>
-        <p>趣味: 散歩</p>
+        <p>趣味: 散歩,ごはん</p>
         
         <p>✅ 完了したら、この課題は終了です</p>
     </div>
