--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 </head>
 <body>
     <h1>現在時刻</h1>
-    <div id="clock" style="font-size: 48px; font-weight: bold; color: blue;">
+    <div id="clock" style="font-size: 48px; font-weight: bold; color: red;">
         00:00:00
     </div>
+    
     <h1>🌐 Phase 0-1: HTML基礎確認</h1>
     <div>
         <h2>📝 課題1: 自己紹介セクション作成</h2>
