--- a/second.html
+++ b/second.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>🌐 Phase 0-1: HTML基礎確認 2ページ目</h1>
+
+    <div>
+    <h2>BMI指標計算</h2>
+        <form oninput="bmi.value = Math.round(Number(weight.value) / Math.pow(Number(height.value)/100, 2) * 10) / 10">
+        <p><label>体重(kg)：<input name="weight" type="number" step="any"></label></p>
+        <p><label>身長(cm)：<input name="height" type="number" step="any"></label></p>
+        <p><label>BMI：<output name="bmi"></output></label></p>
+        </form>
+    </div>
     
     <div>
         <h2>📋 課題: おすすめの旅行先</h2>
