--- a/second.html
+++ b/second.html
@@ -13,7 +13,7 @@
         <form oninput="bmi.value = Math.round(Number(weight.value) / Math.pow(Number(height.value)/100, 2) * 10) / 10">
         <p><label>体重(kg)：<input name="weight" type="number" step="any"></label></p>
         <p><label>身長(cm)：<input name="height" type="number" step="any"></label></p>
-        <p><label>BMI：<output name="bmi"></output></label></p>
+        <p><label>BMI：<b></b><font color="red"><output name="bmi"></output></font></b></label></p>
         </form>
     </div>
     
